<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">keyboardutils</string>
    <string name="english_ime_name">KeyboardTemplate</string>
    <string name="facebook_app_id">1493491937637672</string>
    <string name="menu_item_settings">Settings</string>
    <string name="charging_module_charging_state_unknown">Unplugged from charger</string>
    <string name="charging_module_charging_state_speed">Regular</string>
    <string name="charging_module_charging_state_continuous">Continuous</string>
    <string name="charging_module_charging_state_trickle">Trickle</string>
    <string name="charging_module_charging_state_finish">Fully Charged</string>
    <string name="charging_module_speed_charging_left_time_indicator">Full Charge Left</string>
    <string name="charging_module_continuous_charging_left_time_indicator">Full Charge Left</string>
    <string name="charging_module_trickle_charging_left_time_indicator">Full Charge Left</string>
    <string name="charging_module_finish_charging_left_time_indicator">Fully charged</string>
    <string name="charging_module_discharging_left_time_indicator">Remaining Time</string>
    <string name="charging_module_charging_state_speed_charging_indicator">Charging your battery at the maximum speed till 80%.</string>
    <string name="charging_module_charging_state_continuous_charging_indicator">Keep charging your battery to its maximum capacity.</string>
    <string name="charging_module_charging_state_trickle_charging_indicator">Keep charging to reliably protect battery and explore it\'s optimal performance (About 10 mins).</string>
    <string name="charging_module_close_charging_boost">Disable</string>
    <string name="charging_module_alert_close_charge_title">Disable Battery Master?</string>
    <string name="charging_module_default_module_name">Battery Master</string>
    <string name="charging_module_alert_close_charge_tip">Your battery will not be protected. Are you sure to disable?</string>
    <string name="charging_module_alert_close">Disable</string>
    <string name="charging_module_alert_cancel">Not now</string>
    <string name="charging_module_real_full_charged">Fully Charged!</string>
    <string name="charging_module_real_full_charged_tip">Battery has been fully charged! You can unplug charger anytime you want.</string>
    <string name="charging_module_fast_charging">Fast Charging</string>
    <string name="charging_module_battery_low">Battery Low</string>
    <string name="charging_module_low_voltage">Low Voltage!</string>
    <string name="charging_module_low_voltage_tip">Opps, the voltage from charger is too low!</string>
    <string name="charging_module_battery_doctor">Battery Doctor!</string>
    <string name="charging_module_battery_doctor_tip">Charge for 10 more minutes to extend your battery capacity.</string>
    <string name="charging_module_cut_off_charger">Charger Cut off!</string>
    <string name="charging_module_cut_off_charger_tip">Oops, your mobile phone hasn\'t fully charged yet.  Battery has suffered a damage.</string>
    <string name="charging_module_enable_plug_title">Enable Fast Charging</string>
    <string name="charging_module_enable_plug_tip">enable fassssst charging tip</string>
    <string name="enable">OK</string>
    <string name="charger_connected_title_disabled">Charger Connected</string>
    <string name="enable_charging_detail">Enable smart charging to optimize battery. Contains Ads.</string>
    <string name="disable_battery_master">Disable Battery Master</string>
    <string name="applying">Applying...</string>
    <string name="cancel">cancel</string>
    <string name="exit_dialog_msg">Are you sure you want to exit?</string>
    <string name="custom_ui_rate_alert_title">Enjoy %1$s?</string>
    <string name="custom_ui_rate_alert_description">Tap the number of stars you\'d give us.</string>
    <string name="custom_ui_rate_alert_title_rate_five">Thanks! Please share the love on the Google Play.</string>
    <string name="custom_ui_rate_alert_title_rate_less_than_five">Thanks!\nWe need your feedback.</string>
    <string name="custom_ui_rate_alert_negative_button">Maybe Later</string>
    <string name="custom_ui_rate_alert_positive_button_rate_five">Rate Now</string>
    <string name="custom_ui_rate_alert_positive_button_rate_less_than_five">Send Email</string>
    <string name="feedback_email">Fill by app</string>
    <string name="font_robot_medium">sans-serif-medium</string>
    <string name="font_robot_regular">sans-serif</string>
    <string name="font_robot_light">sans-serif-light</string>
    <string name="prefs_notification_enable">prefs_notification_enable</string>
    <string name="all_apps_interstitial_ad_display_failed_txt">Oops… try again later.</string>
    <string name="all_apps_interstitial_ad_notice">WOW! Check out this amazing app!</string>
    <string name="locker_wallpaper_network_error">Network errors. Please try again.</string>
    <string name="tip_accessibility">Find %s. Switch it on to enable Usage Access.</string>
    <string name="tip_usage_access">Find %s. Switch it on to enable Smart Memory Protection</string>
    <string name="ad_placement_lucky" translatable="false">Master_A((NativeAds)Lucky</string>
    <string name="ad_placement_boost_tip" translatable="false">500_A(NativeAds)SevenInOne</string>
    <string name="lucky_game_award_no_network_description">No network connection!</string>
    <string name="lucky_game_award_chances_receive_btn">ACCEPT</string>
    <string name="lucky_game_award_theme_action">DOWNLOAD</string>
    <string name="lucky_game_chance_restore_timer">More grabs in %1$s</string>
    <string name="lucky_game_award_wallpaper_description">Wonderful Wallpaper!</string>
    <string name="lucky_game_award_wallpaper_action">SET AS WALLPAPER</string>
    <string name="lucky_game_award_chances_description">Congratulations! +3 grabs!</string>
    <string name="lucky_game_award_theme_description">Found a new theme!</string>
    <string name="lucky_game_chance_counter">Grabs: %1$s</string>
    <string name="lucky_game_award_boom_description">"GRABS: "</string>
    <string name="lucky_game_award_ad_related_title">You’ve won a prize!</string>
    <string name="launcher_widget_lucky_title">Lucky</string>
    <string name="lucky_game_award_empty_action">TRY AGAIN</string>
    <string name="boost_tip_title_memory">Memory Freed Up</string>
    <string name="boost_tip_title_cpu_temperature">Phone Cooled Down</string>
    <string name="boost_tip_title_battery">Battery Life Extended</string>
    <string name="boost_tip_optimal">Your phone is optimal now!</string>
    <string name="charging_screen_guide_subtitle">Protect device from overcharging!</string>
    <string name="settings_auth_button_text">OK</string>
    <string name="byte_abbr" translatable="false">B</string>
    <string name="kilobyte_abbr" translatable="false">KB</string>
    <string name="megabyte_abbr" translatable="false">MB</string>
    <string name="gigabyte_abbr" translatable="false">GB</string>
    <string name="terabyte_abbr" translatable="false">TB</string>
    <string name="petabyte_abbr" translatable="false">PB</string>
    <string name="set_as_default_boost_battery_figure">%1$dmin</string>
    <string name="set_as_default_boost_cool_figure_celsius" translatable="false">%1$d\u00b0C</string>
    <string name="set_as_default_boost_cool_figure_fahrenheit" translatable="false">%1$d\u00b0F</string>
    <string name="charging_screen_time" formatted="false">%s:%s</string>
    <string name="charging_screen_date" formatted="false">%s %s %s</string>
    <string name="charging_screen_charged_left_describe" formatted="false">Full charge left %s</string>
    <string name="charging_screen_charged_full">Fully charged</string>
    <string name="charging_screen_menu_item">Turn off</string>
    <string name="charging_screen_unlock_describe">Swipe to unlock</string>
    <string name="charging_screen_charging_tip1">Stop background apps to accelerate charge speed.</string>
    <string name="charging_screen_charging_tip2">Reaching a temperature of 40\u2103 can be harmful for your battery.</string>
    <string name="charging_screen_charging_tip3">Smart Charging monitors your charge status to ensure your battery is in a good state.</string>
    <string name="charging_screen_charging_tip4">Removing your charger could harm your battery while in the charging battery mode.</string>
    <string name="charging_screen_charging_tip5">Even though the phone is not charged, it\’s safe to remove charger while in the almost charged mode.</string>
    <string name="charging_screen_charging_tip6" formatted="false">%s will reduce the charge to protect your battery during the fully charged mode.</string>
    <string name="charging_screen_charging_speed_charging_state_tip_view">Removing charger would be harmful to your battery</string>
    <string name="charging_screen_charging_continue_charging_state_tip_view">Phone is not charged, and it\’s safe to remove charger</string>
    <string name="charging_screen_charging_trickle_charging_state_tip_view">App is reducing the charge to protect your battery</string>
    <string name="charging_screen_close_dialog_title">Turn Off Smart Charging?</string>
    <string name="charging_screen_close_dialog_content">If you turn off smart charging, you\'ll not be able to protect your battery anymore. Are you sure to turn it off?</string>
    <string name="charging_screen_close_dialog_negative_action">TURN OFF</string>
    <string name="charging_screen_close_dialog_positive_action">NOT NOW</string>
    <string name="charging_screen_charging_state_des">...........</string>
    <string name="charging_screen_guide_turn_on">Your battery is under protection!</string>
    <string name="charging_screen_settings_title">Battery protection</string>
    <string name="charging_screen_settings_subtitle">(Contains ads)</string>
    <string name="charging_screen_settings_description">Protect device from overcharging</string>
    <string name="charging_screen_guide_battery_title">Turn on Battery Protection to extend battery life!</string>
    <string name="charging_screen_guide_temperature_title">Turn on Battery Protection to cool down device!</string>
    <string name="launcher_widget_boost_title">Boost</string>
    <string name="notification_boost_plus_title_ram">%1$s%% Memory Used!</string>
    <string name="notification_boost_plus_content_ram">One-tap boost now!</string>
    <string name="notification_boost_plus_title">%1$s Apps Slowing Down Phone!</string>
    <string name="set_as_default_alert_cancel_btn">LATER</string>
    <string name="advanced_boost_authorize_btn">OK</string>
    <string name="battery_bluetooth">Bluetooth</string>
    <string name="battery_mobile_data">Mobile Data</string>
    <string name="battery_auto">Auto</string>
    <string name="battery_auto_sync">Auto Sync</string>
    <string name="battery_brightness">Brightness</string>
    <string name="battery_haptic_feedback">Haptic Feedback</string>
    <string name="battery_off">Off</string>
    <string name="battery_on">On</string>
    <string name="battery_screen_timeout">Screen Timeout</string>
    <string name="battery_vibrate">Vibrate</string>
    <string name="battery_wifi">Wifi</string>
    <string name="clean_powerful_clean">Powerful Clean</string>
    <string name="clean_need_authorization">%1$s stubborn junk files will be cleaned after accessibility enabled. Enable or not?</string>
    <string name="clean_hidden_junk_dialog_message">%1$s stubborn junk files will be cleaned after accessibility enabled. Enable or not?</string>
    <string name="accessibility_dialog_description">Detected: %1$s apps always auto start automatically. Stop them after accessibility enabled!</string>
    <string name="enable_now">ENABLE NOW</string>
    <string name="notice">Notice</string>
    <string name="skip">SKIP</string>
</resources>