<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="8dp"
              android:background="@drawable/charging_module_rate_alert_corner_bg"
              android:orientation="vertical">

    <TextView
        android:id="@+id/close_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:text="@string/charging_module_alert_close_charge_title"
        android:textColor="#dd000000"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/charging_module_alert_close_charge_tip"
        android:textColor="#aa000000"
        android:textSize="13sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#11000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/alert_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/charging_module_alert_close"
            android:textColor="#aa000000"
            android:textSize="16sp"/>


        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#11000000"/>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/alert_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/charging_module_alert_cancel"
            android:textColor="#ccffffff"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>