<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingEnd="18dp"
    android:paddingLeft="20dp"
    android:paddingRight="18dp"
    android:paddingStart="20dp"
    android:paddingTop="30dp">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/bottom_dialog_icon_iv"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:srcCompat="@drawable/clean_power_clean_icon_svg"/>

    <LinearLayout
        android:id="@+id/bottom_dialog_content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/bottom_dialog_icon_iv"
        android:layout_toRightOf="@+id/bottom_dialog_icon_iv"
        android:orientation="vertical">

        <com.ihs.feature.common.TypefacedTextView
            android:id="@+id/dialog_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_powerful_clean"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:typeface="@string/roboto_regular"/>

        <com.ihs.feature.common.TypefacedTextView
            android:id="@+id/dialog_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/clean_hidden_junk_dialog_message"
            android:textColor="@color/permission_guide_text_gray"
            app:typeface="@string/roboto_regular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_dialog_content_ll"
        android:layout_marginTop="29dp"
        android:baselineAligned="false"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skip_btn"
            style="@style/DialogButton"
            android:background="@drawable/material_compat_button_bg"
            android:text="@string/skip"
            android:textColor="@color/material_text_black_secondary"/>

        <Space
            android:layout_width="@dimen/dialog_button_padding"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/action_btn"
            style="@style/DialogButton"
            android:background="@drawable/clean_button_custom"
            android:text="@string/advanced_boost_authorize_btn"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>
