<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/floating_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <LinearLayout
        android:id="@+id/tip_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/dialog_normal_bg"
        android:clipChildren="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <com.honeycomb.launcher.view.TypefacedTextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:text="@string/notice"
                android:textColor="@color/black_primary"
                android:textSize="20sp"
                app:typeface="@string/proxima_nova_semibold" />

        </RelativeLayout>

        <com.honeycomb.launcher.view.TypefacedTextView
            android:id="@+id/content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="17dp"
            android:layout_marginStart="17dp"
            android:text="@string/accessibility_dialog_description"
            android:textColor="@color/black_secondary"
            android:textSize="16sp" />

        <!-- Buttons layout_marginBottom has no effect when api < 19. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dialog_button_margin"
            android:paddingLeft="@dimen/dialog_button_margin"
            android:paddingRight="@dimen/dialog_button_margin">

            <Button
                android:id="@+id/action_btn"
                style="@style/DialogMatchButton"
                android:background="@drawable/material_compat_button_bg_blue"
                android:text="@string/enable_now"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
